# arithmo

./: CMakeLists.txt  README.md
example/: cbk.c  main.c
include/: arithmo.h
src/: arithmo.c  lexer.c  lexer.h  table.c  table.h  token.h
